<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skeleton</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Access WebAPI from Android!</string>
	<string name="all_greetings">All Greetings:</string>
	<string name="no_greeting">[None]</string>
	<string name="g_id">Id: </string>
	<string name="g_content">Greeting: </string>
	<string name="b_add">Add</string>
	<string name="b_update">Update</string>
	<string name="b_delete">Delete</string>
	<string name="b_refresh">Refresh</string>
</resources>
